--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             </div>
 
             <div class="staff">
-                <img src="DDS/team-1.jpg" alt="Staff">
+                <img src="DDS/Peter (1).jpg" alt="Staff">
                 <h3>MR. ONYANGO PETER <br>(Tutor)</h3>
                 <p>An Expert in offering computer training in <br>various fields for beginers, intermediat <br>and advanced learners</p>
                 
